# pringle

./: .gitignore  CMakeLists.txt
controller/: CMakeLists.txt
controller/inc/: Controller.hpp  GamepadReader.hpp  RadioManager.hpp  VideoDisplay.hpp
controller/include/: Controller.hpp  GamepadReader.hpp  RadioManager.hpp  VideoDisplay.hpp
controller/src/: Controller.cpp  GamepadReader.cpp  RadioManager.cpp  VideoDisplay.cpp  main.cpp
drone/: CMakeLists.txt
drone/inc/: GamepadReader.hpp  RadioManager.hpp  main.hpp  workers.hpp
drone/include/: CameraCapture.hpp  DroneApp.hpp  MotorController.hpp  RadioManager.hpp  ServoController.hpp
drone/src/: CameraCapture.cpp  DroneApp.cpp  GamepadReader.cpp  MotorController.cpp  RadioManager.cpp  ServoController.cpp  main.cpp  pringle_controller  workers.cpp
scripts/: setup_controller.sh  setup_drone.sh
scripts/test/: receiver.py  transmitter.py
shared/: protocol.hpp
